<resources>
<<<<<<< HEAD
    <string name="app_name">SR Factory Mode</string>
=======
    <string name="app_name">SR Factory Model</string>
>>>>>>> 9f3c1ad69fd50ae07b351f4d3601d2965f149b22
    <string name="switch_language">Switch language</string>
    <string name="basic_info">Basic Information</string>
    <string name="device_name">Device name:</string>
    <string name="device_model">Device model:</string>
    <string name="device_version">Version:</string>
    <string name="android_version">Android version:</string>
    <string name="ram">RAM:</string>
    <string name="rom">ROM:</string>
    <string name="battery_size">Battery size:</string>
    <string name="screen_size">Screen size:</string>
    <string name="screen_resolution">Screen resolution:</string>
    <string name="capture">CAPTURE</string>
    <string name="call_112">CALL 112</string>
    <string name="single_test">Single Test</string>
    <string name="report">Report</string>
    <string name="mAh">mAh</string>
    <string name="g">G</string>
    <string name="gb">GB</string>
    <string name="inch">Inch</string>
    <string name="pixel">Pixel</string>
    <string name="permission_title"> Permission request </string>
    <string name="permission_message"> Since the SRFactoryMode have not enough permissions, it can not run normally. Please set permissions and use them. Setting path: System Settings -> SRFactoryMode -> Permissions </string>
    <string name="cancel"> Cancel </string>
    <string name="go_setting"> Go to settings </string>
    <string name="tel_112">tel:112</string>-->
    <string name="exit">Press the back button again to exit the application.</string>
    <string name="battery_test">Battery Test</string>
    <string name="vibration_test">Vibration Test</string>
    <string name="mike_test">Mike Test</string>
    <string name="headphones_test">Headphone Test</string>
    <string name="lcd_test">LCD Test</string>
    <string name="speaker_test">Speaker test</string>
    <string name="receiver_test">Receiver Test</string>
    <string name="camera_test">Camera Test</string>
    <string name="flash_test">Flash Test</string>
    <string name="keys_test">Keys Test</string>
    <string name="battery_charge_status">Charge status:</string>
    <string name="battery_level">Battery level:</string>
    <string name="battery_voltage">Battery voltage:</string>
    <string name="battery_temperature">Battery temperature:</string>
    <string name="pass">PASS</string>
    <string name="fail">FAIL</string>
    <string name="is_charging">Charging</string>
    <string name="no_charging">Not charged</string>
    <string name="battery_level_unit">%</string>
    <string name="voltage_unit">mV</string>
    <string name="temperature_unit">℃</string>
    <string name="single_item_position">Single Test Item Position</string>
    <string name="battery_test_tip">Uncharged can not click the PASS</string>
    <string name="vibraion_test_tip">Vibration test, please observe whether it is normal...</string>
    <string name="not_support_vibration">The Device does not support vibration</string>
    <string name="mike_test_tip">Click on the recording button first, and the recording will automatically play after 5 seconds...</string>
    <string name="record">Recording</string>
    <string name="recording"> During the recording, please speak... </string>
    <string name="record_playing"> The recording is complete, playing recording... </string>
    <string name="record_test_finish"> Test completed, recording and playback completed... </string>
    <string name="testing">Testing</string>
    <string name="retest">Retest</string>
    <string name="begin">BEGIN</string>
    <string name="headphones_test_tip">Plug in the headphones first, then click the recording button, and the recording will automatically play after 5 seconds...</string>
    <string name="speaker_test_tip">Speaker test, make sure the headphones is removed first, then pay attention whether the speaker has sound...</string>
    <string name="speaker_test_headphones">Please remove the headphones</string>
    <string name="speaker_test_no_headphones">Headphones removed</string>
    <string name="receiver_test_tip">Receiver test, make sure the headphones is removed first, then pay attention to whether the receiver has sound...</string>
    <string name="not_support_receiver_test">The device does not have a built-in receiver</string>
    <string name="front_camera">Front Camera</string>
    <string name="rear_camera">Rear Camera</string>
    <string name="disable_quick_clicks">Disable quick clicks</string>
    <string name="flash_test_tip">Flash test, please observe whether it is normal...</string>
    <string name="key_volume_up">Volume Up Key</string>
    <string name="key_volume_down">Volume Down Key</string>
    <string name="key_power">Power Key</string>
    <string name="keys_test_tip">Keys test, please press the physical Volume Up Key, Volume Down Key and Power Key...</string>
<<<<<<< HEAD
    <string name="single_flash_tip">The device is a single flash</string>
    <string name="dual_flash_tip">The Device is dual flash</string>
    <string name="plugged_headphones">The earphones have been plugged in.</string>
    <string name="not_plugged_headphones"> Please insert the headphones.</string>
    <string name="plz_insert_and_test">Please insert your headphones before clicking record.</string>
    <string name="camera_cannot_pass">The test is not over yet, please revert the camera to test and click PASS.</string>
    <string name="test_unfinished">You have not finished the test yet, so you cannot click PASS.</string>
=======
    <string name="plugged_headphones">The earphones have been plugged in.</string>
    <string name="not_plugged_headphones"> Please insert the headphones.</string>
    <string name="plz_insert_and_test">Please insert your headphones before clicking record.</string>
    <string name="cannot_pass_fail">untested or in testing cannot PASS.</string>
    <string name="camera_cannot_pass">The test is not over yet, please revert the camera to test and click PASS.</string>
    <string name="key_quit">You have not finished the test yet, so you cannot click PASS.</string>
    <string name="testing_disabled_exit">Testing, can not possible to exit</string>
>>>>>>> 9f3c1ad69fd50ae07b351f4d3601d2965f149b22
    <string name="untested">UNTESTED</string>
</resources>