<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center_vertical|start"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_basic_info"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/basic_info"
        android:textColor="@color/gray"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_device_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:padding="7dp"
        android:text="@string/device_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_basic_info" />

    <TextView
        android:id="@+id/tv_device_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:padding="7dp"
        android:text="@string/device_model"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_device_name" />

    <TextView
        android:id="@+id/tv_device_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:padding="7dp"
        android:text="@string/device_version"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_device_model" />

    <TextView
        android:id="@+id/tv_android_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:padding="7dp"
        android:text="@string/android_version"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_device_version" />

    <TextView
        android:id="@+id/tv_ram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:padding="7dp"
        android:text="@string/ram"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_android_version" />

    <TextView
        android:id="@+id/tv_rom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:padding="7dp"
        android:text="@string/rom"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_ram" />

    <TextView
        android:id="@+id/tv_battery_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:padding="7dp"
        android:text="@string/battery_size"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rom" />

    <TextView
        android:id="@+id/tv_screen_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:padding="7dp"
        android:text="@string/screen_size"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_battery_size" />

    <TextView
        android:id="@+id/tv_screen_resolution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:padding="7dp"
        android:text="@string/screen_resolution"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_screen_size" />

    <View
        android:id="@+id/v_split_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:background="#737373"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_screen_resolution" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_split_line">

        <android.widget.Button
            android:id="@+id/btn_capture"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:text="@string/capture"
            android:layout_marginEnd="30dp"
            android:textSize="17sp"/>

        <android.widget.Button
            android:id="@+id/btn_call_112"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:text="@string/call_112"
            android:textSize="17sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear1">

        <android.widget.Button
            android:id="@+id/btn_single_test"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:text="@string/single_test"
            android:textSize="17sp"
            android:layout_marginEnd="30dp" />

        <android.widget.Button
            android:id="@+id/btn_report"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:text="@string/report"
            android:textSize="17sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>