<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".singletest.KeysTestActivity">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/black">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|start"
                android:text="@string/keys_test"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>
        <android.widget.Button
            android:id="@+id/btn_key_volume_up"
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:text="@string/key_volume_up"
            android:textSize="15sp"
            android:textAllCaps="false" />
        <android.widget.Button
            android:id="@+id/btn_key_volume_down"
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/key_volume_down"
            android:textSize="15sp"
            android:textAllCaps="false" />
        <android.widget.Button
            android:id="@+id/btn_key_power"
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/key_power"
            android:textSize="15sp"
            android:textAllCaps="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <android.widget.Button
                android:id="@+id/btn_pass"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="30dp"
                android:text="@string/pass"
                android:textSize="15sp"/>

            <android.widget.Button
                android:id="@+id/btn_fail"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/fail"
                android:textSize="15sp"/>
        </LinearLayout>

    </LinearLayout>
</layout>
