<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".singletest.ReceiverTestActivity">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|start"
            android:text="@string/receiver_test"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </Toolbar>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receiver_test_tip"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <android.widget.Button
            android:id="@+id/btn_pass"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:text="@string/pass"
            android:textSize="15sp"
            android:textAllCaps="false" />

        <android.widget.Button
            android:id="@+id/btn_fail"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/fail"
            android:textSize="15sp"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>