<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".singletest.BatteryTestActivity">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/black">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|start"
                android:text="@string/battery_test"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery_charge_status"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/tv_battery_charge_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="15sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery_level"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/tv_battery_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="15sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery_voltage"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/tv_battery_voltage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="15sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery_temperature"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/tv_battery_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="15sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <android.widget.Button
                android:id="@+id/btn_pass"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="30dp"
                android:text="@string/pass"
                android:textSize="15sp" />

            <android.widget.Button
                android:id="@+id/btn_fail"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/fail"
                android:textSize="15sp"/>
        </LinearLayout>


    </LinearLayout>
</layout>