<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".singletest.LcdTestActivity">


    <android.widget.Button
        android:id="@+id/btn_begin"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="330dp"
        android:text="@string/begin"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <android.widget.Button
            android:id="@+id/btn_pass"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:text="@string/pass"
            android:textSize="15sp"/>

        <android.widget.Button
            android:id="@+id/btn_fail"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/fail"
            android:textSize="15sp"/>
    </LinearLayout>
</LinearLayout>